@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Manage photo retention
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class SessionRetention {
 +Guid SessionId
 +int Months = 12
 +DateTimeOffset? ExpiresAt
 +DateTimeOffset? NotifiedAt
 +RetentionState State
 +long Version
 +Extend(expiresAt: DateTimeOffset): void
}
class PhotoReferenceImpact {
 +Guid PhotoId
 +int PublishedReferences
 +int UnreviewedRequests
 +long Revision
}
SessionRetention "1" o-- "0..*" PhotoReferenceImpact : Reference check projection
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- SessionRetention : persists or supplies inputs
interface IPhotoStorage
class DeleteSessionPhotosHandler
DeleteSessionPhotosHandler ..> IPhotoStorage : uses
DeleteSessionPhotosHandler ..> SessionRetention : orchestrates
@enduml
